
syntax = "proto2";


package pb.ap_common.ap_common_types_consts;

message AP_COMMON_TYPES_Consts{
  optional uint32 AP_G_MAX_NUM_STATIC_OBJ_NU = 1257;
  optional uint32 AP_G_MAX_NUM_SENSOR_TYPES_NU = 3049;
  optional uint32 AP_G_MAX_NUM_PTS_STATIC_POLY_NU = 3489;
  optional uint32 AP_G_MAX_NUM_DYN_OBJECTS_NU = 2944;
  optional uint32 AP_G_MAX_NUM_PTS_FOR_DYN_POLY_NU = 1236;
  optional uint32 AP_G_MAX_NUM_P_SPACE_MARKINGS_NU = 856;
  optional uint32 AP_G_NUM_POINTS_PER_PARKING_LINE_NU = 2383;
  optional uint32 AP_G_MAX_NUM_POSES_PREV_PATH_NU = 2085;
  optional uint32 AP_G_MAX_NUM_LANE_BOUNDARIES_NU = 2429;
  optional uint32 AP_G_MAX_NUM_LANE_BOUND_PTS_NU = 1270;
  optional uint32 AP_G_MAX_NUM_LANES_NU = 1065;
  optional uint32 AP_G_MAX_NUM_US_SENSORS_NU = 1249;
  optional uint32 AP_G_MAX_NUM_PARKING_BOXES_NU = 3635;
  optional uint32 AP_G_MAX_NUM_EXTERNAL_POSES_NU = 3879;
  optional uint32 AP_G_MAX_NUM_SV_CAMS_NU = 3869;
  optional uint32 AP_G_MAX_NUM_P_BOX_VERTICES_NU = 2387;
  optional uint32 AP_G_MAX_NUM_P_BOX_DELIMITERS_NU = 3995821;
  optional uint32 AP_G_MAX_NUM_VIRTUAL_LINES_NU = 2017;
  optional uint32 AP_G_NUM_TAPOS_INFLATED_OBJ_NU = 3507;
  optional uint32 AP_G_MAX_NUM_TARGET_POSES_NU = 2637;
  optional uint32 COLL_G_MAX_NUM_DYN_OBJECTS_NU = 8568595;
  optional uint32 COLL_G_MAX_NUM_STATIC_OBJ_NU = 2318;
  optional uint32 AP_G_MAX_NUM_PTS_IN_VIRTUAL_LINE_NU = 440;
  optional uint32 AP_V_MIRROR_SHAPE_MAX_SIZE_NU = 1558;
  optional uint32 AP_V_HITCH_SHAPE_MAX_SIZE_NU = 2187;
  optional uint32 AP_V_WHEEL_SHAPE_MAX_SIZE_NU = 2176;
  optional uint32 AP_V_VEHICLE_SHAPE_MAX_SIZE_NU = 3282;
  optional uint32 AP_V_NUM_WHEELS_NU = 2825;
}

message AP_COMMON_TYPES_Consts_array_port{
   repeated pb.ap_common.ap_common_types_consts.AP_COMMON_TYPES_Consts data = 1176;
}
